3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

 common/object.c: don't use global errmsg variable for errors, just LOG() them.
---
Remove static buffer from create_template_pathname().
 common/map.c
 include/libproto.h
 server/server.c
---
Remove static buffer from create_pathname().
 common/map.c
 include/libproto.h
 server/plugins.c server.c
 utils/mapper.c
---
Remove static buffer from create_overlay_pathname().
 common/map.c
 include/libproto.h
 server/c_wiz.c plugins.c
---
Remove static buffer from create_items_path(), and play it safe with length.
 common/map.c
---
Remove static buffer for query_base_name().
 common/button.c item.c object.c
 include/libproto.h
 server/alchemy.c apply.c c_objects.c c_range.c player.c plugins.c shop.c
 socket/info.c item.c
 types/item_transformer/item_transformer.c
---
Remove static buffer for get_ob_diff().
 common/object.c loader.l
 include/libproto.h
 server/c_wiz.c
Ryo 2007-02-10

No functional changes, just compilation warnings / Doxygen stuff.
---
Add missing includes.
 types/book/book.c
 types/identify_altar/identify_altar.c (also fix missing argument)
 types/item_transformer/item_transformer.c
 types/transport/transport.c
---
Add newline at end.
 types/common/common_apply.c
 types/trigger/trigger.c
---
Add Doxygen path info to distinguish files.
 common/button.c
 random_maps/exit.c
 server/alchemy.c apply.c rune.c spell_effect.c
 types/button/button.c
 types/exit/exit.c
 types/rune/rune.c
 types/spell_effect/spell_effect.c
 utils/bwp.c
Ryo 2007-02-09

Remove static buffer from ob_describe(). Make op some parameter const.
 include/ob_methods.h sproto.h typesproto.h
 server/c_object.c ob_methods.c
 types/common/describe.c