@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove static buffer from get_string_move_type().
+ common/loader.l
+---
  common/object.c: don't use global errmsg variable for errors, just LOG() them.
 ---
 Remove static buffer from create_template_pathname().
